{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 102,
  "lineage": "281a2759-2683-7e45-e673-2b36e8e95f47",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:897729142473:internet-gateway/igw-09f110448d97ae582",
            "id": "igw-09f110448d97ae582",
            "owner_id": "897729142473",
            "tags": {
              "Name": "cloud-infra-demo-igw"
            },
            "tags_all": {
              "Name": "cloud-infra-demo-igw"
            },
            "vpc_id": "vpc-02887bbd808b37f7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:897729142473:internet-gateway/igw-0c3fb1021b5fa8994",
            "id": "igw-0c3fb1021b5fa8994",
            "owner_id": "897729142473",
            "tags": {
              "Name": "ecs-igw"
            },
            "tags_all": {
              "Name": "ecs-igw"
            },
            "vpc_id": "vpc-0b945d50bfdee62d0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:897729142473:route-table/rtb-0a9162b1e1eb981f1",
            "id": "rtb-0a9162b1e1eb981f1",
            "owner_id": "897729142473",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c3fb1021b5fa8994",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b945d50bfdee62d0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:897729142473:route-table/rtb-03702e02e5e0fa22f",
            "id": "rtb-03702e02e5e0fa22f",
            "owner_id": "897729142473",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09f110448d97ae582",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloud-infra-demo-public-rt"
            },
            "tags_all": {
              "Name": "cloud-infra-demo-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02887bbd808b37f7e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.app_igw",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015fb31c426887e3f",
            "route_table_id": "rtb-0a9162b1e1eb981f1",
            "subnet_id": "subnet-014fbbc31eb01e3ab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2b571344eea1458",
            "route_table_id": "rtb-03702e02e5e0fa22f",
            "subnet_id": "subnet-0fc2927fb7feee3cd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.app_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_b",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:897729142473:security-group/sg-0b2f479c175a55eed",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b2f479c175a55eed",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-fargate-sg",
            "name_prefix": "",
            "owner_id": "897729142473",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-fargate-sg"
            },
            "tags_all": {
              "Name": "ecs-fargate-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b945d50bfdee62d0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:897729142473:subnet/subnet-014fbbc31eb01e3ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014fbbc31eb01e3ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897729142473",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-public-subnet-a"
            },
            "tags_all": {
              "Name": "ecs-public-subnet-a"
            },
            "vpc_id": "vpc-0b945d50bfdee62d0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:897729142473:subnet/subnet-0fc2927fb7feee3cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc2927fb7feee3cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897729142473",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloud-infra-demo-public-b"
            },
            "tags_all": {
              "Name": "cloud-infra-demo-public-b"
            },
            "vpc_id": "vpc-02887bbd808b37f7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:897729142473:subnet/subnet-0e9bdc1d96206ab5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9bdc1d96206ab5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897729142473",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloud-infra-demo-public-c"
            },
            "tags_all": {
              "Name": "cloud-infra-demo-public-c"
            },
            "vpc_id": "vpc-02887bbd808b37f7e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:897729142473:vpc/vpc-02887bbd808b37f7e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f991ccde2b1e7e78",
            "default_route_table_id": "rtb-07ee32e7d88f8b32b",
            "default_security_group_id": "sg-0c41e65f5bc8fa9c0",
            "dhcp_options_id": "dopt-0ebe5f77ee88cc5ac",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02887bbd808b37f7e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07ee32e7d88f8b32b",
            "owner_id": "897729142473",
            "tags": {
              "Name": "cloud-infra-demo-vpc"
            },
            "tags_all": {
              "Name": "cloud-infra-demo-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:897729142473:vpc/vpc-0b945d50bfdee62d0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e64aa09a60baa699",
            "default_route_table_id": "rtb-00ffc5b88491dd65a",
            "default_security_group_id": "sg-0e4a9425ebd3dc012",
            "dhcp_options_id": "dopt-0ebe5f77ee88cc5ac",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b945d50bfdee62d0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00ffc5b88491dd65a",
            "owner_id": "897729142473",
            "tags": {
              "Name": "ecs-vpc"
            },
            "tags_all": {
              "Name": "ecs-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}